@@ -1,3 +1,9 @@
+2001-07-09  Ryan Nunn <triforce@merlin.net.au>
+	* gamewin.cc: Casting an unsigned char* to char*
+	* tools/expack.cc: Expack will now produce a header for any flex it
+	  creates. The Header is called name_flx.h or simlar. The header
+	  contains #defines for all the files that have been put in it.
+
 2001-07-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* game.cc, ??game.cc, exultmenu.cc, gamewin.*, keyactions.cc:
 	fixed more annoying palette-flashes. cleaned up a bit
